tracking-service/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bantam-shuttle-tracking
  namespace: bantam-shuttle
  labels:
    app: bantam-shuttle-tracking
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: bantam-shuttle-tracking
  ports:
  - name: http
    port: 8081
    targetPort: 8081
    protocol: TCP
  sessionAffinity: None
